--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4277,3 +4277,98 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
 }
+.carousel {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+}
+
+.carousel-track-container {
+	display: flex;
+}
+
+.carousel-track {
+	display: flex;
+	transition: transform 0.5s ease-in-out;
+}
+
+.carousel-slide {
+	min-width: 50%; /* Two items visible at a time */
+	box-sizing: border-box;
+}
+
+
+.carousel-button {
+	position: absolute;
+	top: 50%;
+	
+	border: none;
+	background: none; /* Remove background */
+	color: #444;
+	cursor: pointer;
+	padding: 0; /* Remove padding */
+}
+
+.carousel-button.left {
+	left: 5px;
+}
+
+.carousel-button.right {
+	right: 5px;
+}
+
+.carousel-button i {
+	font-size: 24px; /* Adjust icon size */
+}
+.contact-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 20px; /* Added margin-bottom for spacing */
+}
+
+.contact-info {
+	flex: 1;
+	text-align: left;
+}
+
+.follow-us {
+	display: flex;
+	align-items: center;
+}
+
+.social-container {
+	display: flex;
+}
+
+.social-container a {
+	border: 1px solid #dddddd;
+	border-radius: 50%;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 5px;
+	height: 40px;
+	width: 40px;
+	transition: 0.3s ease-in-out;
+	color: #555;
+	text-decoration: none; /* Added to remove underline */
+}
+
+.social-container a:hover {
+	border-color: #E68F5C; /* Changed to border-color for consistency */
+	color: #E68F5C;
+}
+
+.social {
+	margin-left: 10px;
+	color: #000;
+	text-decoration: none; /* Added to remove underline */
+	font-size: 20px;
+}
+
+.social i {
+	font-size: 18px; /* Adjusted icon size for better fit */
+}
+
+  
